--- a/NegaPaginator/pom.xml
+++ b/NegaPaginator/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>com.nega</groupId>
 	<artifactId>negapaginator</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.0.2</version>
 	<name>NegaPaginator</name>
 	<description>Integration of NegaPaginator for Vaadin flow</description>
 
@@ -72,6 +72,12 @@
 			<artifactId>nega-paginator</artifactId>
 			<version>2.0.6</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-beans</artifactId>
+			<version>5.1.3.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
@@ -103,7 +109,8 @@
 					<scanIntervalSeconds>-1</scanIntervalSeconds>
 					<useTestScope>true</useTestScope>
 					<webAppConfig>
-						<resourceBase>src/main/resources/META-INF/resources</resourceBase>
+						<resourceBase>${project.basedir}/src/main/resources/META-INF/resources</resourceBase>
+						<resourceBase>${project.basedir}/src/test/resources/</resourceBase>
 					</webAppConfig>
 				</configuration>
 			</plugin>
